--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Da ora puoi passare dalla camera frontale alla posteriore (e viceversa) anche quando sei l'unica persona in una chiamata di gruppo. Così non ti coglieranno più di sorpresa quando entrano di soppiatto nella chiamata! 
+• Abbiamo risolto un bug che a volte impediva di unirsi a un nuovo gruppo (o riunirsi a un gruppo già esistente) e un altro che rendeva difficile cambiare visualizzazione durante le chiamate di gruppo quando una persona alzava la mano. Come si suol dire: abbiamo preso due bug con un aggiornamento! 
