--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Теперь вы можете переключать камеру, даже если, кроме вас, на групповом звонке ещё никого нет. Предоставьте собеседникам возможность увидеть происходящее из первого ряда, включив заднюю камеру, или переключитесь обратно на переднюю, когда придёт ваша очередь говорить. 
+• Мы исправили ошибку, из-за которой некоторые пользователи не могли присоединиться к новой группе или повторно присоединиться к старой, а также исправили ошибку, из-за которой во время групповых звонков было сложно переключаться между режимами отображения при поднятой руке. Это, несомненно, наши любимые исправления ошибок в этом релизе. 
