--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Teraz môžete v skupinovom hovore prepínať medzi prednou a zadnou kamerou, a to aj vtedy, keď sa k hovoru ešte nepripojili iní ľudia. 
+• Opravili sme chybu, ktorá bránila niektorým používateľom pripojiť sa k novej skupine alebo sa znovu pripojiť k existujúcej skupine a tiež chybu, ktorá sťažovala posúvanie medzi zobrazeniami počas skupinových hovorov, keď bola zdvihnutá ruka. 
