--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• グループ通話で、他のユーザーがまだ通話に参加していなくても、フロントカメラとバックカメラを切り替えられるようになりました。 
+• ユーザーが新しいグループに参加したり、元々入っていたグループに再参加できない不具合を修正しました。また、グループ通話中に手を挙げている間、ビュー間を移動しにくくなっていた不具合も修正しました。 
