--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Agora pode alternar entre a câmara frontal e traseira numa chamada de grupo, mesmo que outras pessoas ainda não se tenham juntado. 
+• Corrigimos um erro que impedia alguns utilizadores de se juntarem a um novo grupo ou a voltarem a juntar-se a um grupo existente. Também corrigimos um erro que tornava mais difícil fazer scroll entre visualizações durante chamadas de grupo enquanto uma mão estivesse levantada. 
