--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Acum poți întoarce camera chiar și atunci când ești singur într-un apel de grup. Pregătește-te să le oferi o perspectivă de primul rând, trecând la camera din spate sau mută înapoi la camera frontală, astfel încât să fii gata să răspunzi. 
+• Am remediat o eroare care împiedica unii utilizatori să se alăture unui grup nou sau să se alăture unui grup existent și, de asemenea, am remediat o eroare care îngreuna derularea între vizualizări în timpul apelurilor de grup în timp ce o mână era ridicată. Acestea sunt, fără îndoială, remedierile noastre preferate din această versiune. 
