--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• พัฒนาอีกขั้นเพื่อให้คุณสามารถสลับกล้องหน้า-หลังในสายโทรกลุ่มได้ทันที ไม่ต้องมัวรอให้สมาชิกคนอื่นมาเข้าร่วมการโทรก่อนอีกต่อไป 
+• เราแก้ไขบั๊กที่อาจเคยทำให้ผู้ใช้บางคนไม่สามารถเข้าร่วมกลุ่มใหม่หรือเข้าร่วมกลุ่มเดิมที่เคยเป็นสมาชิกอยู่ รวมถึงบั๊กที่เป็นอุปสรรคในการเลื่อนดูข้อมูลในสายโทรกลุ่มระหว่างที่มีคนยกมือ 
