--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• Artık bir grup görüşmesinde tek başınayken bile kamerayı çevirebilirsin. Görüşmedeyken, arka kameraya geçerek veya ön kameraya geri dönerek gruptakilerle karşılıklı konuşabilirsin. 
+• Bazı kullanıcıların yeni bir gruba katılmasını veya mevcut bir gruba yeniden katılmasını engelleyen bir hatanın yanı sıra, grup görüşmeleri sırasında birisi el kaldırdığında, görünümler arasında gezinmeyi zorlaştıran bir hatayı da düzelttik. Bu bahsettiklerimiz bu sürümdeki en sevdiğimiz hata düzeltmeleridir. 
