--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,2 +1,2 @@
-• Now you can flip the camera even when you're alone in a group call. Get ready to give them a front-row view by switching to the back camera, or switch back to the front camera so that you're ready to talk back. 
-• We fixed a bug that prevented some users from joining a new group or re-joining an existing group, and we also fixed a bug that made it harder to scroll between views during group calls while a hand was raised. These are hands down our favorite bugfixes in this release. 
+• 现在您可以在群组通话中切换前置或后置摄像头，其他用户未加入通话也不受影响。 
+• 我们修复了一个妨碍一些用户加入新群组或重新加入已有群组的漏洞；我们还修复了另一个漏洞，在群组通话中，该漏洞会在有人举手时导致用户难以在视图间滚动屏幕。 
